src/tests/snapshots/cendol__tests__pp_header_name__comment_tokens.snap
---
source: src/tests/pp_header_name.rs
assertion_line: 44
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: ok
- kind: Semicolon
  text: ;
